finish files page